[tool.poetry]
name = "koubo"
version = "0.1.0"
description = ""
authors = ["nakazono1011 <syousanitiosi1011@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
